c@031124 1728 root folder changed as quiz

--- a/quiz/q1.html
+++ b/quiz/q1.html
@@ -31,7 +31,7 @@
             <button id="showAnswers">Show Answers</button>
         </div>
     </div>
-    <script src="quiz.js"></script>
+    <script src="q1.js"></script>
 </body>
 
 </html>
