--- a/quiz/tambolaP.html
+++ b/quiz/tambolaP.html
@@ -26,7 +26,7 @@
                 const ticketDiv = document.getElementById('ticket');
 
                 // Loop through the ticket numbers
-                ticket.forEach((num, index) => {
+                ticket.forEach((num) => {
                     const div = document.createElement('div');
                     div.classList.add('cell');
 
