--- a/quiz/tambolaM.html
+++ b/quiz/tambolaM.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tambola Manager</title>
     <link rel="stylesheet" type="text/css" href="tambola.css">
+    <!-- Add Firebase SDK -->
+    <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-database.js"></script>
 </head>
 
 <body>
@@ -19,6 +22,20 @@
     <button onclick="addPlayer()">Add Player</button>
     <p id="winner-message"></p>
 
+    <script>
+        // Initialize Firebase
+        const firebaseConfig = {
+            apiKey: "AIzaSyBZAVFIJV9W_A4W7lh07Ikt2-oeNuMwJhQ",
+            authDomain: "tambola-db7bb.firebaseapp.com",
+            databaseURL: "https://tambola-db7bb-default-rtdb.firebaseio.com",
+            projectId: "tambola-db7bb",
+            storageBucket: "tambola-db7bb.appspot.com",
+            messagingSenderId: "689800248387",
+            appId: "1:689800248387:web:68767bd47485bdf7d828f6"
+        };
+        firebase.initializeApp(firebaseConfig);
+        const database = firebase.database();
+    </script>
     <script src="tambolaM.js"></script>
 </body>
 
