--- a/quiz/tambolaM.html
+++ b/quiz/tambolaM.html
@@ -15,7 +15,7 @@
     <h1>Tambola Game - Manager</h1>
     <div id="number-board" class="number-board"></div>
     <button onclick="callNumber()">Call Number</button>
-    <h3>Called Number: <span id="called-number">--</span></h3>
+    <h3>Called Number: <span id="called-number">-</span></h3>
 
     <h2>Players</h2>
     <div id="players"></div>
