tambola upd phrase included in tambolaM.html 1820

--- a/quiz/tambolaM.html
+++ b/quiz/tambolaM.html
@@ -16,6 +16,7 @@
     <div id="number-board" class="number-board"></div>
     <button onclick="callNumber()">Call Number</button>
     <h3>Called Number: <span id="called-number">-</span></h3>
+    <p id="called-phrase"></p> <!-- Container for the phrase -->
 
     <h2>Players</h2>
     <div id="players"></div>
