--- a/quiz/tambolaP.html
+++ b/quiz/tambolaP.html
@@ -9,6 +9,8 @@
     <!-- Add Firebase SDK -->
     <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-database.js"></script>
+    <!-- Add Font Awesome for icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <style>
         /* Add styles for landscape mode */
         @media (orientation: landscape) {
@@ -39,6 +41,7 @@
 
 <body>
     <div class="landscape-message">Please rotate your device to landscape mode for a better experience.</div>
+    <p id="message">Hari Sarvothama <i class="fas fa-place-of-worship"></i> Vayu Jeevothama</p>
     <h1 id="ticket-title">Tambola Ticket</h1>
     <div id="ticket" class="ticket"></div>
     <p id="message"></p> <!-- To display any messages or errors -->
