--- a/quiz/tambolaM copy.html
+++ b/quiz/tambolaM copy.html
@@ -7,9 +7,8 @@
     <title>Tambola Manager</title>
     <link rel="stylesheet" type="text/css" href="tambola.css">
     <!-- Add Firebase SDK -->
-    <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-auth-compat.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-database-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-database.js"></script>
 </head>
 
 <body>
