--- a/quiz/tambolaM copy 2.html
+++ b/quiz/tambolaM copy 2.html
@@ -24,7 +24,20 @@
     <button onclick="addPlayer()">Add Player</button>
     <p id="winner-message"></p>
 
-    <!-- Do NOT initialize Firebase here, it's done in tambolaM.js -->
+    <script>
+        // Initialize Firebase
+        const firebaseConfig = {
+            apiKey: "AIzaSyBZAVFIJV9W_A4W7lh07Ikt2-oeNuMwJhQ",
+            authDomain: "tambola-db7bb.firebaseapp.com",
+            databaseURL: "https://tambola-db7bb-default-rtdb.firebaseio.com",
+            projectId: "tambola-db7bb",
+            storageBucket: "tambola-db7bb.appspot.com",
+            messagingSenderId: "689800248387",
+            appId: "1:689800248387:web:68767bd47485bdf7d828f6"
+        };
+        firebase.initializeApp(firebaseConfig);
+        const database = firebase.database();
+    </script>
     <script src="tambolaM.js"></script>
 </body>
 
